fixed white space on homepage, added bootstrap

--- a/ah.css
+++ b/ah.css
@@ -1,10 +1,13 @@
 
 /* Nav */
 
-
+#navDiv {
+	margin:0;
+}
 
 nav ul {
 	font-family: 'Open Sans', sans-serif;
+	font-size: 18px;
 	list-style: none;
 	margin: 0px;
 	padding: 0px;
@@ -85,10 +88,9 @@ nav a#pull {
 	background: url(../images/fern-1250903_1280.jpg) no-repeat 50% 50%;
 	background-attachment: fixed;
 	background-size: cover;
-	width: 100%;
 	height: auto;
-	padding-top: 250px;
-	padding-bottom: 350px;
+	padding-top: 100px;
+	padding-bottom: 250px;
 	}
 
 /* End Welcome */
@@ -203,6 +205,7 @@ ul.img-list li:hover span.text-content {
 	text-decoration: none;
 	display: inline-block;
 	padding: 15px 32px;
+	outline: 0;
 }
 
 #info {
@@ -237,7 +240,6 @@ ul.img-list li:hover span.text-content {
 	background: url(../images/light-bulb-1246043_1280.jpg) no-repeat 50% 50%;
 	background-attachment: fixed;
 	background-size: cover;
-	width: 100%;
 	height: auto;
 	padding-top: 75px;
 	padding-bottom: 75px;
